--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,31 @@
 <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.dangbei.gonzalez.GonTextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            app:gon_layout_width="200"
-            app:gon_layout_height="200"
-            android:background="#ff0"/>
+        android:id="@+id/gtv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ff0"
+        android:text="ABC"
+        android:textColor="#000"
+        app:gon_layout_height="300"
+        app:gon_layout_marginLeft="100"
+        app:gon_layout_marginTop="200"
+        app:gon_layout_width="200"
+        app:gon_paddingLeft="50"
+        app:gon_paddingTop="50"
+        app:gon_textSize="40"/>
 
-    <android.support.percent.PercentFrameLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="#f0f"
-            app:layout_marginTopPercent="5%"
-            app:layout_heightPercent="20%"
-            app:layout_widthPercent="20%"/>
-
-    <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            android:background="#f0f"
-            app:layout_heightPercent="20%"
-            app:layout_widthPercent="70%"/>
+    <com.dangbei.gonzalez.GonRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/gtv"
+        android:layout_toEndOf="@id/gtv"
+        android:layout_toRightOf="@id/gtv"
+        android:background="#f0f"
+        app:gon_layout_height="200"
+        app:gon_layout_width="200"/>
 </RelativeLayout>
