--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.dangbei.gonzalez.GonTextView
+    <com.dangbei.gonzalez.view.GonTextView
         android:id="@+id/gtv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ff0"
+        android:drawableTop="@mipmap/ic_launcher_round"
+        android:gravity="center_horizontal"
         android:text="ABC"
         android:textColor="#000"
-        app:gon_layout_height="300"
-        app:gon_layout_marginLeft="100"
+        app:gon_horizontalDrawablePadding="120"
+        app:gon_layout_height="500"
+        app:gon_layout_marginLeft="400"
         app:gon_layout_marginTop="200"
-        app:gon_layout_width="200"
-        app:gon_paddingLeft="50"
+        app:gon_layout_width="500"
         app:gon_paddingTop="50"
-        app:gon_textSize="40"/>
+        app:gon_textSize="70"/>
 
-    <com.dangbei.gonzalez.GonRelativeLayout
+    <com.dangbei.gonzalez.layout.GonRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/gtv"
@@ -27,5 +29,6 @@
         android:layout_toRightOf="@id/gtv"
         android:background="#f0f"
         app:gon_layout_height="200"
+        app:gon_layout_marginLeft="200"
         app:gon_layout_width="200"/>
 </RelativeLayout>
