--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout
+<com.dangbei.gonzalez.layout.GonRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     <com.dangbei.gonzalez.view.GonTextView
         android:id="@+id/gtv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#ff0"
         android:drawableTop="@mipmap/ic_launcher_round"
         android:gravity="center_horizontal"
@@ -29,6 +29,5 @@
         android:layout_toRightOf="@id/gtv"
         android:background="#f0f"
         app:gon_layout_height="200"
-        app:gon_layout_marginLeft="200"
-        app:gon_layout_width="200"/>
-</RelativeLayout>
+        app:gon_layout_marginLeft="200"/>
+</com.dangbei.gonzalez.layout.GonRelativeLayout>
