--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,9 @@
         android:gravity="center_horizontal"
         android:text="ABC"
         android:textColor="#000"
-        app:gon_horizontalDrawablePadding="120"
+        app:gon_drawableHeight="80"
+        app:gon_drawablePadding="120"
+        app:gon_drawableWidth="80"
         app:gon_layout_height="500"
         app:gon_layout_marginLeft="400"
         app:gon_layout_marginTop="200"
